--- a/JS.html
+++ b/JS.html
@@ -7,8 +7,8 @@
     <title>JavaScript</title>
 </head>
 <body>
-    <script>
-        
-    </script>
+
+    <script src="./skript.js"></script>
+    
 </body>
 </html>
