--- a/main.html
+++ b/main.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./massif.js"></script>
+    <script src="./objects.js"></script>
 </body>
 </html>
