Add_skripts_to_HTML

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./constructor.js"></script>
+    <div id="results"></div>
+    <script src="./skript.js"></script>
 </body>
 </html>
