--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="results"></div>
-    <script src="./skript.js"></script>
+    <script src="./errors.js"></script>
 </body>
 </html>
